--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>document</title>
+    <title>login_page</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
+    <div id="form">
+        <label for="email">Email</label>
+        <input type="text" id="email" placeholder="Enter Your Email">
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Enter Your Password">
+        <input id="submit" type="submit" value="Login"><br>
+        <h2>Or</h2>
+        <a href="home.html">Go to home Page</a>
+        <div id="box">
+    
+        </div>
+     
+    </div>
+  
+
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
  <script src="js/app.js"> </script>
 </body>
 </html>
