--- a/home.html
+++ b/home.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home_Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div id="back">
     <a href="index.html">Go back</a>
+    <button id="remove">logout</button>
 </div>    
 <div id="box">
     
