--- a/home.html
+++ b/home.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <div id="back">
+    <!-- go back is the link to go back to the login page -->
     <a href="index.html">Go back</a>
+    <!-- logout button is on the home page to log out -->
     <button id="remove">logout</button>
 </div>    
 <div id="box">
