--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <!-- this form will take email and password from the user -->
     <div id="form">
         <label for="email">Email</label>
         <input type="text" id="email" placeholder="Enter Your Email">
@@ -17,6 +18,7 @@
         <input type="password" id="password" placeholder="Enter Your Password">
         <input id="submit" type="submit" value="Login"><br>
         <h2>Or</h2>
+        <!-- user can go the home page directly but there will be no content if there is no login data provided -->
         <a href="home.html">Go to home Page</a>
         <div id="box">
     
